First vars